--- a/css/main.css
+++ b/css/main.css
@@ -372,22 +372,6 @@ summary {
   position: relative;
 }
 
-.field__input {
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  margin-bottom: 10px;
-  padding-left: 38px;
-  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.field__input:focus {
-  outline: 1px solid #2196f3;
-  border-color: #2196f3;
-}
-
 .field__label {
   font-size: 12px;
   line-height: 1.17;
@@ -407,11 +391,18 @@ summary {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.field__input:focus ~ .field__icon {
-  fill: #2196f3;
+.field__input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  margin-bottom: 10px;
+  padding-left: 38px;
+  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.field__input--comment {
+.field__input.field__comment {
   height: 120px;
   padding: 12px 16px;
   resize: none;
@@ -419,6 +410,15 @@ summary {
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
+}
+
+.field__input:focus {
+  outline: 1px solid #2196f3;
+  border-color: #2196f3;
+}
+
+.field__input:focus ~ .field__icon {
+  fill: #2196f3;
 }
 
 .accept-label {
@@ -442,18 +442,6 @@ summary {
   color: #757575;
 }
 
-.accept-label__checkbox {
-  -webkit-appearance: none;
-}
-
-.accept-label__checkbox:checked + .accept-label__icon {
-  border: none;
-  background-image: url("../images/check-icon.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-color: #2196f3;
-}
-
 .accept-label__icon {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -474,6 +462,18 @@ summary {
   color: #2196f3;
   text-decoration: underline;
   margin-left: 3px;
+}
+
+.accept-label__checkbox {
+  -webkit-appearance: none;
+}
+
+.accept-label__checkbox:checked + .accept-label__icon {
+  border: none;
+  background-image: url("../images/check-icon.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: #2196f3;
 }
 
 .button {
@@ -512,13 +512,13 @@ summary {
   cursor: pointer;
 }
 
+.button-close__icon {
+  display: inline-block;
+}
+
 .button-close:hover .button-close__icon,
 .button-close:focus .button-close__icon {
   fill: #2196f3;
-}
-
-.button-close__icon {
-  display: inline-block;
 }
 
 .header {
@@ -822,18 +822,6 @@ summary {
   margin-top: 50px;
 }
 
-.team__item {
-  background: #ffffff;
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-  text-align: center;
-}
-
-.team__item--thumb {
-  padding-top: 30px;
-}
-
 .team__title {
   font-weight: 500;
   font-size: 16px;
@@ -847,6 +835,18 @@ summary {
   text-align: center;
   color: #757575;
   margin-top: 10px;
+}
+
+.team__item {
+  background: #ffffff;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  text-align: center;
+}
+
+.team__item--thumb {
+  padding-top: 30px;
 }
 
 .team__icon-list {
@@ -894,6 +894,10 @@ summary {
   height: 92px;
 }
 
+.client__item + .client__item {
+  margin-left: 30px;
+}
+
 .client__item .client__link {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -918,10 +922,6 @@ summary {
 .client__link:focus {
   border-color: #2196f3;
   fill: #2196f3;
-}
-
-.client__item + .client__item {
-  margin-left: 30px;
 }
 
 .filters__list {
@@ -958,8 +958,7 @@ summary {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filters__btn:focus,
-.filters__btn:hover {
+.filters__btn:focus, .filters__btn:hover {
   background-color: #2196f3;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -976,22 +975,9 @@ summary {
           flex-flow: row wrap;
 }
 
-.projects__item {
-  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .projects__thumb {
   position: relative;
   overflow: hidden;
-}
-
-.projects__item:hover .projects__drop-item {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-  opacity: 1;
 }
 
 .projects__drop-item {
@@ -1015,31 +1001,18 @@ summary {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.projects__item:hover {
-  cursor: pointer;
-  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.top-item {
-  margin-bottom: 30px;
-}
-
-.center-item {
-  margin-left: 30px;
-  margin-right: 30px;
-}
-
-.projects__item .projects__img {
-  display: block;
-  max-width: 100%;
-}
-
 .projects__text-thumb {
   max-width: 370px;
   background-color: #fff;
   border: 1px solid #eeeeee;
   padding: 24px;
+}
+
+.projects__item {
+  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .projects__item .item-title {
@@ -1054,6 +1027,32 @@ summary {
   font-size: 16px;
   line-height: 1.9;
   color: #757575;
+}
+
+.projects__item .projects__img {
+  display: block;
+  max-width: 100%;
+}
+
+.projects__item:hover {
+  cursor: pointer;
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.projects__item:hover .projects__drop-item {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  opacity: 1;
+}
+
+.top-item {
+  margin-bottom: 30px;
+}
+
+.center-item {
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .footer {
