--- a/scss/components/_backdrop.scss
+++ b/scss/components/_backdrop.scss
@@ -8,11 +8,10 @@
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
+  &.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+  }
 }
 
 .modal {
@@ -38,20 +37,42 @@
   flex-direction: column;
 
   padding: 40px;
-}
+  &__title {
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 1.15;
+    letter-spacing: 0.03em;
+    color: $main-text-color;
 
-.form__title {
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 1.15;
-  letter-spacing: 0.03em;
-  color: $main-text-color;
-
-  margin-bottom: 12px;
+    margin-bottom: 12px;
+  }
 }
 
 .field {
   position: relative;
+
+  &__label {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+
+    color: $secondary-text-color;
+
+    margin-bottom: 4px;
+  }
+
+  &__icon {
+    position: absolute;
+    top: 30px;
+    left: 15px;
+
+    display: inline-block;
+
+    background-size: contain;
+    fill: $main-text-color;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .field__input {
@@ -65,50 +86,27 @@
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.field__input:focus {
-  outline: 1px solid $accent-color;
-  border-color: $accent-color;
-}
+  &.field__comment {
+    height: 120px;
+    padding: 12px 16px;
 
-.field__label {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
+    resize: none;
 
-  color: $secondary-text-color;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+  }
 
-  margin-bottom: 4px;
-}
+  &:focus {
+    outline: 1px solid $accent-color;
+    border-color: $accent-color;
+  }
 
-.field__icon {
-  position: absolute;
-  top: 30px;
-  left: 15px;
-
-  display: inline-block;
-
-  background-size: contain;
-  fill: $main-text-color;
-
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.field__input:focus ~ .field__icon {
-  fill: $accent-color;
-}
-
-.field__input--comment {
-  height: 120px;
-  padding: 12px 16px;
-
-  resize: none;
-
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
+  &:focus ~ .field__icon {
+    fill: $accent-color;
+  }
 }
 
 .accept-label {
@@ -123,6 +121,24 @@
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: $secondary-text-color;
+  &__icon {
+    display: inline-flex;
+    align-items: center;
+    height: 15px;
+    width: 15px;
+    border: 1px solid $main-text-color;
+    border-radius: 4px;
+
+    margin-right: 7px;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &--doc {
+    color: $accent-color;
+    text-decoration: underline;
+    margin-left: 3px;
+  }
 }
 
 .accept-label__checkbox {
@@ -135,25 +151,6 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-color: $accent-color;
-}
-
-.accept-label__icon {
-  display: inline-flex;
-  align-items: center;
-  height: 15px;
-  width: 15px;
-  border: 1px solid $main-text-color;
-  border-radius: 4px;
-
-  margin-right: 7px;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.accept-label--doc {
-  color: $accent-color;
-  text-decoration: underline;
-  margin-left: 3px;
 }
 
 .button {
@@ -192,13 +189,13 @@
   padding: 0;
   border-radius: 50%;
   cursor: pointer;
-}
 
-.button-close:hover .button-close__icon,
-.button-close:focus .button-close__icon {
-  fill: $accent-color;
-}
+  &__icon {
+    display: inline-block;
+  }
 
-.button-close__icon {
-  display: inline-block;
+  &:hover &__icon,
+  &:focus &__icon {
+    fill: $accent-color;
+  }
 }
