--- a/scss/components/_clients-section.scss
+++ b/scss/components/_clients-section.scss
@@ -7,31 +7,31 @@
 .client__item {
   width: 170px;
   height: 92px;
-}
 
-.client__item .client__link {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
+  & + & {
+    margin-left: 30px;
+  }
 
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
+  & .client__link {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
 
-  background-color: $main-white-color;
-  background-size: contain;
-  background-position: center;
-  fill: #afb1b8;
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
 
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: $main-white-color;
+    background-size: contain;
+    background-position: center;
+    fill: #afb1b8;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .client__link:hover,
 .client__link:focus {
   border-color: $accent-color;
   fill: $accent-color;
-}
-
-.client__item + .client__item {
-  margin-left: 30px;
 }
