format header footer
format all to scss and send to mentor

--- a/scss/components/_about-section.scss
+++ b/scss/components/_about-section.scss
@@ -1,10 +1,36 @@
 .about {
   padding: 94px 0 47px 0;
-}
 
-.about__list {
-  display: flex;
-  flex-direction: row;
+  &__list {
+    display: flex;
+    flex-direction: row;
+  }
+
+  &__icon-thumb {
+    display: inline-flex;
+    height: 120px;
+    width: 270px;
+    align-items: center;
+    justify-content: center;
+    background-color: $background-light-color;
+    margin-bottom: 30px;
+  }
+
+  &__title {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color: $main-text-color;
+    margin-bottom: 10px;
+  }
+
+  &__text {
+    letter-spacing: 0.03em;
+    color: $secondary-text-color;
+    font-size: 14px;
+    line-height: 1.7;
+  }
 }
 
 .about__item {
@@ -13,16 +39,10 @@
   line-height: 1.7;
   color: $secondary-text-color;
   width: calc(100% / 4);
-}
 
-.about__icon-thumb {
-  display: inline-flex;
-  height: 120px;
-  width: 270px;
-  align-items: center;
-  justify-content: center;
-  background-color: $background-light-color;
-  margin-bottom: 30px;
+  &:not(:first-child) {
+    margin-left: 30px;
+  }
 }
 
 .antena,
@@ -31,24 +51,4 @@
 .astro {
   height: 70px;
   width: 70px;
-}
-
-.about__title {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-  color: $main-text-color;
-  margin-bottom: 10px;
-}
-
-.about__text {
-  letter-spacing: 0.03em;
-  color: $secondary-text-color;
-  font-size: 14px;
-  line-height: 1.7;
-}
-
-.about__item + .about__item {
-  margin-left: 30px;
 }
