--- a/css/main.css
+++ b/css/main.css
@@ -567,7 +567,7 @@ summary {
   margin-left: 93px;
 }
 
-.header-nav__item + .header-nav__item {
+.header-nav__item:not(:first-child) {
   margin-left: 50px;
 }
 
@@ -586,12 +586,7 @@ summary {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-nav__link:hover,
-.header-nav__link:focus {
-  color: #2196f3;
-}
-
-.active {
+.header-nav__link:hover, .header-nav__link:focus {
   color: #2196f3;
 }
 
@@ -603,6 +598,10 @@ summary {
   height: 4px;
   width: 100%;
   background-color: #2196f3;
+}
+
+.active {
+  color: #2196f3;
 }
 
 .header-contacts {
@@ -637,20 +636,16 @@ summary {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-contacts__mail:hover,
+.header-contacts__mail:hover, .header-contacts__mail:focus,
 .header-contacts__number:hover,
-.header-contacts__mail:focus,
 .header-contacts__number:focus {
   color: #2196f3;
 }
 
-.header-contacts__number:hover .header-contacts__icon,
-.header-contacts__number:focus .header-contacts__icon {
-  fill: #2196f3;
-}
-
+.header-contacts__mail:focus .header-contacts__icon,
 .header-contacts__mail:hover .header-contacts__icon,
-.header-contacts__mail:focus .header-contacts__icon {
+.header-contacts__number:focus .header-contacts__icon,
+.header-contacts__number:hover .header-contacts__icon {
   fill: #2196f3;
 }
 
@@ -695,14 +690,6 @@ summary {
           flex-direction: row;
 }
 
-.about__item {
-  display: inline-block;
-  font-size: 14px;
-  line-height: 1.7;
-  color: #757575;
-  width: calc(100% / 4);
-}
-
 .about__icon-thumb {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -717,14 +704,6 @@ summary {
           justify-content: center;
   background-color: #f5f4fa;
   margin-bottom: 30px;
-}
-
-.antena,
-.clock,
-.diagram,
-.astro {
-  height: 70px;
-  width: 70px;
 }
 
 .about__title {
@@ -743,8 +722,24 @@ summary {
   line-height: 1.7;
 }
 
-.about__item + .about__item {
+.about__item {
+  display: inline-block;
+  font-size: 14px;
+  line-height: 1.7;
+  color: #757575;
+  width: calc(100% / 4);
+}
+
+.about__item:not(:first-child) {
   margin-left: 30px;
+}
+
+.antena,
+.clock,
+.diagram,
+.astro {
+  height: 70px;
+  width: 70px;
 }
 
 .works-type {
@@ -894,7 +889,7 @@ summary {
   height: 92px;
 }
 
-.client__item + .client__item {
+.client__item:not(:first-child) {
   margin-left: 30px;
 }
 
@@ -1074,6 +1069,25 @@ summary {
   background: #2f303a;
 }
 
+.footer__contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.footer__block-title {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
 .studio-white {
   color: #ffffff;
 }
@@ -1086,17 +1100,7 @@ summary {
   margin-top: 20px;
 }
 
-.footer-contacts {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.footer-mail {
+.footer__mail {
   margin-top: 9px;
   margin-bottom: 9px;
   font-size: 14px;
@@ -1106,7 +1110,11 @@ summary {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-number {
+.footer__mail:focus, .footer__mail:hover {
+  color: #2196f3;
+}
+
+.footer__number {
   font-size: 14px;
   line-height: 1.7;
   color: rgba(255, 255, 255, 0.6);
@@ -1114,10 +1122,7 @@ summary {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-mail:focus,
-.footer-number:focus,
-.footer-mail:hover,
-.footer-number:hover {
+.footer__number:hover, .footer__number:focus {
   color: #2196f3;
 }
 
@@ -1133,16 +1138,7 @@ summary {
           justify-content: space-between;
 }
 
-.footer__block-title {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
-}
-
-.welcome-list {
+.welcome__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1150,7 +1146,7 @@ summary {
   margin-top: 20px;
 }
 
-.welcome-item .welcome-link {
+.welcome__item .welcome__link {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -1164,12 +1160,12 @@ summary {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.welcome-link:focus,
-.welcome-link:hover {
+.welcome__link:focus,
+.welcome__link:hover {
   background-color: #2196f3;
 }
 
-.subscribe-title {
+.subscribe--title {
   padding-bottom: 20px;
 }
 
