--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -8,6 +8,20 @@
   padding-bottom: 60px;
 
   background: $background-dark-color;
+
+  &__contacts {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__block-title {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: $main-white-color;
+  }
 }
 
 .studio-white {
@@ -22,12 +36,7 @@
   margin-top: 20px;
 }
 
-.footer-contacts {
-  display: flex;
-  flex-direction: column;
-}
-
-.footer-mail {
+.footer__mail {
   margin-top: 9px;
   margin-bottom: 9px;
 
@@ -36,21 +45,24 @@
   color: rgba(255, 255, 255, 0.6);
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus,
+  &:hover {
+    color: $accent-color;
+  }
 }
 
-.footer-number {
+.footer__number {
   font-size: 14px;
   line-height: 1.7;
   color: rgba(255, 255, 255, 0.6);
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.footer-mail:focus,
-.footer-number:focus,
-.footer-mail:hover,
-.footer-number:hover {
-  color: $accent-color;
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 }
 
 .inline {
@@ -59,22 +71,13 @@
   justify-content: space-between;
 }
 
-.footer__block-title {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: $main-white-color;
-}
-
-.welcome-list {
+.welcome__list {
   display: flex;
   gap: 10px;
   margin-top: 20px;
 }
 
-.welcome-item .welcome-link {
+.welcome__item .welcome__link {
   display: inline-flex;
   height: 44px;
   width: 44px;
@@ -86,12 +89,12 @@
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.welcome-link:focus,
-.welcome-link:hover {
+.welcome__link:focus,
+.welcome__link:hover {
   background-color: $accent-color;
 }
 
-.subscribe-title {
+.subscribe--title {
   padding-bottom: 20px;
 }
 
