--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ Use a better box model (opinionated).
 ::after {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-family: 'Roboto';
 }
 
 /**
@@ -41,7 +42,7 @@ Sections
 body {
   margin: 0;
   /* 1 */
-  font-family: system-ui, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Raleway";
+  font-family: system-ui, -apple-system, "Segoe UI", "Roboto", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Raleway";
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   color: #212121;
@@ -68,6 +69,7 @@ p {
 }
 
 h1 {
+  font-family: 'Roboto';
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -77,6 +79,7 @@ h1 {
 }
 
 h2 {
+  font-family: 'Roboto';
   font-weight: bold;
   font-size: 36px;
   line-height: 1.17;
@@ -670,10 +673,11 @@ summary {
 }
 
 .button-get {
-  padding: 10px 32px;
   margin-top: 30px;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .about {
