--- a/scss/components/_heroes.scss
+++ b/scss/components/_heroes.scss
@@ -14,7 +14,7 @@
 }
 
 .button-get {
-  padding: 10px 32px;
   margin-top: 30px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-sizing: border-box;
 }
